refack workflow, try to use native image